<resources>
    <string name="app_name">TMDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_found">Not found</string>
    <string name="search">Search</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="movie_added">Movie successfully added</string>
    <string name="error">Error occurred</string>
    <string name="connection_success">Your internet connection restored.</string>
    <string name="connection_loss">Your internet connection has been lost.</string>
    <string name="movie_deleted">Movie successfully deleted</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="login_title">Login To your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="guest">Guest</string>
    <string name="eng">ENG</string>
    <string name="geo">GEO</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirm">Are you sure ?</string>
</resources>